fix dom nesting error and use less gap for stdout

--- a/src/assets/Console.module.css
+++ b/src/assets/Console.module.css
@@ -12,7 +12,7 @@
   overflow: auto;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 2px;
   flex-grow: 1;
   padding: 8px;
 }
